tests/integration/fail/ranges_index_out_of_bounds.kr
# Test: Range index out of bounds
# Expected: Fail with "Range index out of bounds"

set r to range 1 to 10
set invalid to r at 100

